--- a/main_Navigation_Hub.html
+++ b/main_Navigation_Hub.html
@@ -33,6 +33,8 @@
             Also need:
                 - Navigation bar
                 - background?
+                - MN page
+                - IA page
                 - ...
         
             
