brought document naming more into line

--- a/state_Iowa.html
+++ b/state_Iowa.html
@@ -123,9 +123,9 @@
   </div>
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
     </div>
   </div>
 </header>
@@ -134,10 +134,11 @@
     <script src = "./state_Iowa_Scripts.js"></script>
   <section style = "text-align: center;">
     <div class = "page-top">
-      <h1>Wisconsin State Bird</h1>
-      <!--Change this-->
-      <img src = "https://worldpopulationreview.com/state-outlines/wi/outline-wi-1400w.png" style = "max-height: 100px;">
-      <h3>The American Robin</h3>
+        <!--Change this-->
+        <h1>Wisconsin State Bird</h1>
+        <!--Change this-->
+        <img src = "https://worldpopulationreview.com/state-outlines/wi/outline-wi-1400w.png" style = "max-height: 100px;">
+        <h3>The American Robin</h3>
     </div>
   </section>
 
@@ -166,6 +167,7 @@
         </div>
       </div>
       <div class = "button-container" style = "display:flex; justify-content:center">
+        <!--Change this to maybe how activity08 works-->
         <a href = main_Navigation_hub.html>
             <button style = "margin:10px; border-radius: 8px; font-size:20px;">Population Map</button>
         </a>
