--- a/state_Minnesota.html
+++ b/state_Minnesota.html
@@ -134,7 +134,7 @@
     <script src = "./state_Minnesota_Scripts.js"></script>
   <section style = "text-align: center;">
     <div class = "page-top">
-        <!--Change this-->    
+        <!--Change this to something else-->    
         <h1>Wisconsin State Bird</h1>
         <img src = "https://worldpopulationreview.com/state-outlines/wi/outline-wi-1400w.png" style = "max-height: 100px;">
         <h3>The American Robin</h3>
