--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     </head>
 
     <body>
+        <!--CHANGE NAME TO INDEX.HTML-->
+        <!--^^^^^^^^^^^^^^^^^^^^^^^^^`-->
         <!--Plan is to have either:
                 a) A card view much like Activity05
                     - This would require having State JSON objects
