created new links and updated look
Created index.html as main page
Added most links to each state
Started on customizing the buttons for it
Updated links that previously referred to main_Navigation_hub

--- a/illinois.html
+++ b/illinois.html
@@ -166,7 +166,7 @@
       </div>
       <div class = "button-container" style = "display:flex; justify-content:center">
         <button onclick="unhidePopMap()" style = "margin:10px; border-radius: 8px; font-size:20px;" id = 'pop-map-btn'>Population Map</button>
-        <a href = main_Navigation_hub.html>
+        <a href = index.html>
             <button style = "margin:10px; border-radius: 8px; font-size:20px;">Bird Watching Information</button>
         </a>
         </div>
