--- a/nebraska.html
+++ b/nebraska.html
@@ -135,7 +135,7 @@
   <section style = "text-align: center;">
     <div class = "page-top">
       <h1>Nebraska State Bird</h1>
-      <img src = "https://worldpopulationreview.com/state-outlines/ne/outline-ne-1400w.png" style = "max-height: 70px;">
+      <img src = "https://worldpopulationreview.com/state-outlines/ne/outline-ne-1400w.png">
       <h3>The Western Meadowlark</h3>
     </div>
   </section>
@@ -166,7 +166,7 @@
       </div>
       <div class = "button-container" style = "display:flex; justify-content:center">
         <button onclick="unhidePopMap()" style = "margin:10px; border-radius: 8px; font-size:20px;" id = 'pop-map-btn'>Population Map</button>
-        <a href = main_Navigation_hub.html>
+        <a href = index.html>
             <button style = "margin:10px; border-radius: 8px; font-size:20px;">Bird Watching Information</button>
         </a>
         </div>
