--- a/state_Iowa.html
+++ b/state_Iowa.html
@@ -106,18 +106,19 @@
   <div class="collapse text-bg-dark" id="navbarHeader">
     <div class="container">
       <div class="row justify-content-center">
+        
         <div class="col-sm-3 col-md-2 py-4">
-          <h4><a href = "titlepage.html" style="color: #ffff">Home</a></h4>
+          <h4><a href = "index.html" style="color: #ffff">Home</a></h4>
         </div>
+
         <div class = "col-sm-3 col-md-2 py-4">
-          <h4><a href="states.html" style="color: #ffff">States</a></h4>
+          <h4><a href="state_Hub.html" style="color: #ffff">States</a></h4>
         </div>
-        <div class = "col-sm-3 col-md-2 py-4">
-          <h4><a href = "maps.html" style = "color: #ffff">Maps</a></h4>
-        </div>
+
         <div class="col-sm-3 col-md-2 py-4">
             <h4><a href = "about_us.html" style="color: #ffff">About</a></h4>
-          </div>
+        </div>
+
       </div>
     </div>
   </div>
@@ -166,7 +167,7 @@
       </div>
       <div class = "button-container" style = "display:flex; justify-content:center">
             <button onclick="unhidePopMap()" style = "margin:10px; border-radius: 8px; font-size:20px;" id = 'pop-map-btn'>Population Map</button>
-        <a href = index.html>
+        <a href = state_Hub.html>
             <button style = "margin:10px; border-radius: 8px; font-size:20px;" id = 'bird-watch-btn'>Bird Watching Information</button>
         </a>
         </div>
