finalized most of the document
Added more customization -
fixed all href links -
other tweaks

--- a/illinois.html
+++ b/illinois.html
@@ -106,13 +106,13 @@
   <div class="collapse text-bg-dark" id="navbarHeader">
     <div class="container">
       <div class="row justify-content-center">
-        
+
         <div class="col-sm-3 col-md-2 py-4">
           <h4><a href = "index.html" style="color: #ffff">Home</a></h4>
         </div>
 
         <div class = "col-sm-3 col-md-2 py-4">
-          <h4><a href="states.html" style="color: #ffff">States</a></h4>
+          <h4><a href="state_Hub.html" style="color: #ffff">States</a></h4>
         </div>
 
         <div class="col-sm-3 col-md-2 py-4">
@@ -167,12 +167,10 @@
       </div>
       <div class = "button-container" style = "display:flex; justify-content:center">
         <button onclick="unhidePopMap()" style = "margin:10px; border-radius: 8px; font-size:20px;" id = 'pop-map-btn'>Population Map</button>
-        <a href = state_Hub.html>
-            <button style = "margin:10px; border-radius: 8px; font-size:20px;">Bird Watching Information</button>
-        </a>
+
         </div>
         <div id = 'bird-pop-container' style = 'display:flex; justify-content: center;'>
-          <img src = "https://www.allaboutbirds.org/guide/assets/photo/90628731-720px.jpg" id = 'bird-pop' style = 'display: none;'>
+          <img src = "https://www.allaboutbirds.org/guide/assets/photo/311148961-720px.jpg" id = 'bird-pop' style = 'display: none;'>
         </div>
     </div>
   </div>
