--- a/wisconsin.html
+++ b/wisconsin.html
@@ -107,13 +107,10 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-sm-3 col-md-2 py-4">
-          <h4><a href = "titlepage.html" style="color: #ffff">Home</a></h4>
+          <h4><a href = "index.html" style="color: #ffff">Home</a></h4>
         </div>
         <div class = "col-sm-3 col-md-2 py-4">
-          <h4><a href="states.html" style="color: #ffff">States</a></h4>
-        </div>
-        <div class = "col-sm-3 col-md-2 py-4">
-          <h4><a href = "maps.html" style = "color: #ffff">Maps</a></h4>
+          <h4><a href="state_Hub.html" style="color: #ffff">States</a></h4>
         </div>
         <div class="col-sm-3 col-md-2 py-4">
             <h4><a href = "about_us.html" style="color: #ffff">About</a></h4>
@@ -136,6 +133,7 @@
     <div class = "page-top">
       <h1>Wisconsin State Bird</h1>
       <img src = "https://worldpopulationreview.com/state-outlines/wi/outline-wi-1400w.png" style = "max-height: 100px;">
+      
       <h3>The American Robin</h3>
     </div>
   </section>
@@ -166,9 +164,6 @@
       </div>
       <div class = "button-container" style = "display:flex; justify-content:center">
             <button onclick="unhidePopMap()" style = "margin:10px; border-radius: 8px; font-size:20px;" id = 'pop-map-btn'>Population Map</button>
-        <a href = index.html>
-            <button style = "margin:10px; border-radius: 8px; font-size:20px;" id = 'bird-watch-btn'>Bird Watching Information</button>
-        </a>
         </div>
         <div id = 'bird-pop-container' style = 'display:flex; justify-content: center;'>
           <img src = "https://www.allaboutbirds.org/guide/assets/photo/90628731-720px.jpg" id = 'bird-pop' style = 'display: none;'>
