finished about me, put scripts in a folder, and adjusted html files

--- a/about_us.html
+++ b/about_us.html
@@ -132,7 +132,7 @@
             </div>
         </div>
     </header>
-
+    <h1>Com S 319 - Iowa State University, Spring 2024</h1>
     <h1 class="main-container">About Us</h1>
     <div>
       <h3 style="padding-left: 33px;">Sam Gumm</h3>
@@ -142,5 +142,12 @@
       </div>
     </div>
     
-    <h3>Braeden Hegarty</h3>
+    <div>
+      <h3 style="padding-left: 33px;">Braeden Hegarty</h3>
+      <div style="display:flex; align-items: center;">
+        <img src="./images/headhsot.jfif" alt="Sam Gumm headshot" width="200" style="padding-left: 20px;">
+        <p style=" padding-left: 20px;"><strong>hegartyb@iastate.edu </strong><br>My name is Braeden Hegarty and I am a senior in Computer Science and Chemistry.<br>
+        I have a high interest in data science and analytics, and I hope to use the knowledge from Com S 319 to better my experience with UI design for future projects.</p>
+      </div>
+    </div>
 </html>
