--- a/illinois.html
+++ b/illinois.html
@@ -132,7 +132,7 @@
 </header>
 
 <main>
-    <script src = "./illinois.js"></script>
+    <script src = "./js_scripts/illinois.js"></script>
   <section style = "text-align: center;">
     <div class = "page-top">
       <h1>Illinois State Bird</h1>
