--- a/wisconsin.html
+++ b/wisconsin.html
@@ -128,7 +128,7 @@
 </header>
 
 <main>
-    <script src = "./wisconsin.js"></script>
+    <script src = "./js_scripts/wisconsin.js"></script>
   <section style = "text-align: center;">
     <div class = "page-top">
       <h1>Wisconsin State Bird</h1>
