--- a/nebraska.html
+++ b/nebraska.html
@@ -132,7 +132,7 @@
 </header>
 
 <main>
-    <script src = "./nebraska.js"></script>
+    <script src = "./js_scripts/nebraska.js"></script>
   <section style = "text-align: center;">
     <div class = "page-top">
       <h1>Nebraska State Bird</h1>
