--- a/state_Iowa.html
+++ b/state_Iowa.html
@@ -132,7 +132,7 @@
 </header>
 
 <main>
-    <script src = "./state_Iowa_Scripts.js"></script>
+    <script src = "./js_scripts/state_Iowa_Scripts.js"></script>
     
   <section style = "text-align: center;">
     <div class = "page-top">
