finished the project
cleaned up state_Hub
completed about_us page

--- a/about_us.html
+++ b/about_us.html
@@ -132,13 +132,14 @@
             </div>
         </div>
     </header>
-    <h1>Com S 319 - Iowa State University, Spring 2024</h1>
-    <h1 class="main-container">About Us</h1>
+    <h1 class="main-container">Com S 319 - Iowa State University, Spring 2024</h1>
+    <h2 class="main-container">About Us</h2>
     <div>
       <h3 style="padding-left: 33px;">Sam Gumm</h3>
       <div style="display: flex; align-items: center;">
         <img src="./images/smgumm_Photo.JPG" alt="Sam Gumm headshot" width="200" style="padding-left: 20px;">
-        <p style="padding-left: 20px;">My name is Sam Gumm, and I am a Computer Science senior here at ISU</p>
+        <p style="padding-left: 20px;"><strong>smgumm@iastate.edu</strong><br>My name is Sam Gumm, and I am a Computer Science senior here at ISU.<br>
+        I am interested in project management, and want to eventually lead dev teams. I plan to use the experience gained from this project to better understand the user experience.</p>
       </div>
     </div>
     
